--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html" target="_blank" rel="noopner noreffer">Recipe Title</a>
+    
+    <ul>
+        <li><a href="recipes/lasagna.html" target="_blank" rel="noopner noreffer">Home Made Meat Lasagna</a></li>
+        <li><a href="recipes/pizza.html" target="_blank" rel="noopner noreffer">Homemade Pizza Recipe</a></li>
+    </ul>
     
 </body>
 </html>
