Font edit and webpage title

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </a>
         </li>
 
-        <li class="hg">Moisturiser Recipe
+        <li class="ms">Moisturiser Recipe
             <a href="recipes/moist.html" target="_blank" rel="noopner noreffer">
                 <button class="button1">Recipe</button>
             </a>
