--- a/recipes/foot.html
+++ b/recipes/foot.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mumma's Recipes</title>
+    <title>Mumma's Foot Cream Recipes</title>
     <link rel="stylesheet" href="gcstyles.css">
 </head>
 <body>
-    <h2>Ingredients</h2>
+    <h2>Ingredients (Foot Cream)</h2>
     <hr/>
     <ul>
         <li>5 Spoon Vaseline</li>
