--- a/recipes/chutney.html
+++ b/recipes/chutney.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mumma's Recipes</title>
+    <title>Mumma's Chutney Recipes</title>
     <link rel="stylesheet" href="gcstyles.css">
 </head>
 <body>
-    <h2>Ingredients</h2>
+    <h2>Ingredients-Chutney</h2>
     <hr/>
     <ol>
         <li>Roasted Chana Dal</li>
