--- a/recipes/hairgel.html
+++ b/recipes/hairgel.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mumma's Recipes</title>
+    <title>Mumma's Hair Gel Recipes</title>
     <link rel="stylesheet" href="gcstyles.css">
 </head>
 <body>
-    <h2>Ingredients</h2>
+    <h2>Ingredients (Hair Gel)</h2>
     <hr/>
     <h4>Component 1</h4>
     <ul>
