insertion of checkboxes

--- a/recipes/chutney.html
+++ b/recipes/chutney.html
@@ -10,14 +10,22 @@
     <h2>Ingredients-Chutney</h2>
     <hr/>
     <ol>
-        <li>Roasted Chana Dal</li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Roasted Chana Dal</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Onion</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Ginger</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Garlic</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Tamarind</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Dhania Fresh</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Salt</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Coconut</label><br/></li>
+        <!-- <li>Roasted Chana Dal</li>
         <li>Onion</li>
         <li>Ginger</li>
         <li>Garlic</li>
         <li>Tamarind</li>
         <li>Dhania Fresh</li>
         <li>Salt</li>
-        <li>Coconut</li>
+        <li>Coconut</li> -->
     </ol>
 </body>
 </html>
