--- a/recipes/hairgel.html
+++ b/recipes/hairgel.html
@@ -10,31 +10,44 @@
     <h2>Ingredients (Hair Gel)</h2>
     <hr/>
     <h4>Component 1</h4>
-    <ul>
-        <li>1 Spoon Aloe Vera gel</li>
+    <ol>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Aloe Vera gel</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;2 Spoon Glycerine</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1/2 Spoon Oil Coconut or Castor Oil</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;6 Spoon Rose Water</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;Few Drops Of Essential Oils</label><br/></li>
+        <!-- <li>1 Spoon Aloe Vera gel</li>
         <li>2 Spoon Glycerine</li>
         <li>1/2 Spoon Oil Coconut or Castor Oil</li>
         <li>6 Spoon Rose Water</li>
         <li>Few Drops Of Essential Oils</li>
-        
-    </ul>
+         -->
+    </ol>
     <hr/>
     <h4>Component 2</h4>
     <hr/>
-    <ul>
-        <li>1 Spoon Aloe Vera Gel</li>
+    <ol>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Aloe Vera Gel</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Glycerine</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;2 Spoon Rose Water</label><br/></li>
+        <!-- <li>1 Spoon Aloe Vera Gel</li>
         <li>1 Spoon Glycerine</li>
-        <li>2 Spoon Rose Water</li>
-    </ul>
+        <li>2 Spoon Rose Water</li> -->
+    </ol>
     <hr/>
     <h4>Component 3</h4>
     <hr/>
-    <ul>
-        <li>1 Cup Rose Water</li>
+    <ol>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Cup Rose Water</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Glycerine</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Agran Oil</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Aloe Vera Gel</label><br/></li>
+        
+        <!-- <li>1 Cup Rose Water</li>
         <li>1 Spoon Glycerine</li>
         <li>1 Spoon Agran Oil</li>
-        <li>! Spoon Aloe Vera Gel</li>
-    </ul>
+        <li>1 Spoon Aloe Vera Gel</li> -->
+    </ol>
 
 
 
