--- a/recipes/moist.html
+++ b/recipes/moist.html
@@ -9,12 +9,16 @@
 <body>
     <h2>Ingredients (Moisturiser)</h2>
     <hr/>
-    <ul>
-        <li>2 Spoon Aloe Vera Gel</li>
-        <li>2-3 Drops Rose Essential Oil</li>
+    <ol>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;2 Spoon Aloe Vera Gel</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;2-3 Drops Rose Essential Oil</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Glycerine</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;2 Spoon Rose Water</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1/2 Spoon Almond Oil</label><br/></li>
+        <!-- <li>2-3 Drops Rose Essential Oil</li>
         <li>1 Spoon Glycerine</li>
         <li>2 Spoon Rose Water</li>
-        <li>1/2 Spoon Almond Oil</li>
-    </ul>
+        <li>1/2 Spoon Almond Oil</li> -->
+    </ol>
 </body>
 </html>
