--- a/recipes/foot.html
+++ b/recipes/foot.html
@@ -9,13 +9,19 @@
 <body>
     <h2>Ingredients (Foot Cream)</h2>
     <hr/>
-    <ul>
-        <li>5 Spoon Vaseline</li>
+    <ol>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;5 Spoon Vaseline</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Almond & Castor Oil Mix</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;10 Ten Drops Lavender Oil</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;2 Spoon Aloe Vera Gel</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;1 Spoon Glycerine</label><br/></li>
+        <li><input type="checkbox" id="step" value="first_checkbox"><label for="step">&nbsp; &nbsp;2 Spoon Rose Water</label><br/></li>
+        <!-- <li>5 Spoon Vaseline</li>
         <li>1 Spoon Almond & Castor Oil Mix</li>
         <li>10 Ten Drops Lavender Oil</li>
         <li>2 Spoon Aloe Vera Gel</li>
         <li>1 Spoon Glycerine</li>
-        <li>2 Spoon Rose Water</li>
-    </ul>
+        <li>2 Spoon Rose Water</li> -->
+    </ol>
 </body>
 </html>
